--- a/index.html
+++ b/index.html
@@ -1184,70 +1184,11 @@
             <tr></tr>
             <tr>
                <td nowrap>Example 3:</td>
-               <td><span class="text_e2e">"I should be obliged to take time, sir, before I could give you an answer <br> worthy of you acceptance: a present has many faces to it, has it not?"</span></td>
+               <td><span class="text_e2e">"I should be obliged to take time, sir, before I could give you an answer <br> worthy of your acceptance: a present has many faces to it, has it not?"</span></td>
             </tr>
          </tbody>
       </table>
-      <h4>Elliot:</h4>
-      <table style="margin-left:auto;margin-right:auto;">
-         <tbody>
-            <tr>
-               <td nowrap>Ground truth</td>
-               <td>
-                  <audio controls="">
-                     <source src="wavs/vc-vs-single-speaker/elliot/ground_truth.wav">
-                  </audio>
-               </td>
-            </tr>
-
-            <tr>
-               <td nowrap><span class="text_e2e">Model</span></td>
-               <td><span class="text_e2e">Example 1</span></td>
-               <td><span class="text_e2e">Example 2</span></td>
-               <td><span class="text_e2e">Example 3</span></td>
-            </tr>
-
-            <tr>
-               <td nowrap>Single-speaker</td>
-               <td>
-                  <audio controls="">
-                     <source src="wavs/vc-vs-single-speaker/elliot/ss_0.wav">
-                  </audio>
-               </td>
-               <td>
-                  <audio controls="">
-                     <source src="wavs/vc-vs-single-speaker/elliot/ss_1.wav">
-                  </audio>
-               </td>
-               <td>
-                  <audio controls="">
-                     <source src="wavs/vc-vs-single-speaker/elliot/ss_2.wav">
-                  </audio>
-               </td>
-            </tr>
-
-            <tr>
-               <td nowrap>Our VC model</td>
-               <td>
-                  <audio controls="">
-                     <source src="wavs/vc-vs-single-speaker/elliot/vc_0.wav">
-                  </audio>
-               </td>
-               <td>
-                  <audio controls="">
-                     <source src="wavs/vc-vs-single-speaker/elliot/vc_1.wav">
-                  </audio>
-               </td>
-               <td>
-                  <audio controls="">
-                     <source src="wavs/vc-vs-single-speaker/elliot/vc_2.wav">
-                  </audio>
-               </td>
-            </tr>
-         </tbody>
-      </table>
-
-
+      
       
       <h4>Nancy:</h4>
       <table style="margin-left:auto;margin-right:auto;">
