--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>Model Adaptation Techniques for Few-shot On-device Voice Cloning</title>
+      <title>Efficient Strategies of Few-shot On-device Voice Cloning</title>
       <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
       <!-- <link rel="shortcut icon" href="../../images/taco.png"> -->
       <script>
@@ -72,7 +72,7 @@
      <div class="main">
        <article>
          <header>
-            <h1>Model Adaptation Techniques for Few-shot On-device Voice Cloning</h1>
+            <h1>Efficient Strategies of Few-shot On-device Voice Cloning</h1>
          </header>
       </article>
       <div>
